@@ -1644,11 +1644,11 @@
 </td>
 <td class=cellinside><br /> Converts values from one specific position of a Risoe.BINfileData S4-class<br /> object to an RLum.Analysis object.<br />
 </td>
-<td class=cellinside>0.3.3
+<td class=cellinside>0.4.0
 </td>
-<td class=cellinside>2016-05-02
+<td class=cellinside>2016-05-18
 </td>
-<td class=cellinside>09:43:05
+<td class=cellinside>13:46:01
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
