@@ -1,5 +1,5 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Wed May 18 00:06:48 2016
+% Wed May 18 13:55:57 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -161,7 +161,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany)  $<$br /$>$  R Luminescence Package Team \\ 
   84 & Risoe.BINfileData-class & Class  "Risoe.BINfileData" & $<$br /$>$ S4 class object for luminescence data in R. The object is produced as output$<$br /$>$ of the function  read\_BIN2R .$<$br /$>$ & 0.2.0
  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  85 & Risoe.BINfileData2RLum.Analysis & Convert Risoe.BINfileData object to an RLum.Analysis object & $<$br /$>$ Converts values from one specific position of a Risoe.BINfileData S4-class$<$br /$>$ object to an RLum.Analysis object.$<$br /$>$ & 0.3.3 & 2016-05-02 & 09:43:05
+  85 & Risoe.BINfileData2RLum.Analysis & Convert Risoe.BINfileData object to an RLum.Analysis object & $<$br /$>$ Converts values from one specific position of a Risoe.BINfileData S4-class$<$br /$>$ object to an RLum.Analysis object.$<$br /$>$ & 0.4.0 & 2016-05-18 & 13:46:01
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   86 & RLum-class & Class  "RLum" & $<$br /$>$ Abstract class for data in the package Luminescence$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$ \\ 
   87 & RLum.Analysis-class & Class  "RLum.Analysis" & $<$br /$>$ Object class to represent analysis data for protocol analysis, i.e. all curves, spectra etc.$<$br /$>$ from one measurements. Objects from this class are produced, by e.g.  read\_XSYG2R ,$<$br /$>$ read\_Daybreak2R $<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$ \\ 
